# isynspec

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  PLANNING.md  README.md  pyproject.toml
isynspec/: __init__.py  config.py  session.py
isynspec/core/: config.py  session.py
isynspec/io/: execution.py  fort16.py  fort17.py  fort19.py  fort55.py  fort56.py  fort7.py  input.py  line.py  workdir.py
isynspec/utils/: __init__.py  fortio.py
tests/: __init__.py  conftest.py  test_basic.py  test_config.py  test_execution.py  test_fort16.py  test_fort17.py  test_fort19.py  test_fort55.py  test_fort56.py  test_fort7.py  test_fortio.py  test_input.py  test_line.py  test_session.py  test_session_files.py  test_session_model.py  test_session_spectrum.py  test_workdir.py
tests/data/: test_model.5  test_model.7
tests/examples/: example_fort.55
